<resources>
    <string name="app_name">Food Delivery</string>
    <string name="sub_heading_text">Please type the verification code sent to 18200210.trantuquang@gmail.com</string>
    <string name="verification_code">Verification Code</string>
    <string name="sign_in">
        <u>Sign In</u>
    </string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="start_with_email_or_phone">Start with email or phone</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="sign_in_with">sign in with</string>
    <string name="your_favourite">Your favourite foods delivered fast at your door.</string>
    <string name="foodhub">FoodHub</string>
    <string name="welcome_to">Welcome to</string>
    <string name="skip">Skip</string>
</resources>