<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/welcome_skip"
        android:layout_width="70dp"
        android:layout_height="38dp"
        android:layout_marginStart="292.5dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/background_button"
        android:text="@string/skip"
        android:textColor="#DD2C00"
        android:visibility="visible"
        app:backgroundTint="@color/white"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="101dp"
        android:gravity="top"
        android:lineSpacingExtra="15sp"
        android:text="@string/welcome_to"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/welcome_Food"
        android:layout_width="311dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:gravity="top"
        android:lineSpacingExtra="15sp"
        android:text="@string/foodhub"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textColor="#FF0000"
        />

    <TextView
        android:id="@+id/welcome_your"
        android:layout_width="305dp"
        android:layout_height="64dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:lineSpacingExtra="15sp"
        android:text="@string/your_favourite"
        android:textColor="#30384F"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <View
            android:id="@+id/welcome_line_1"
            android:layout_width="84dp"
            android:layout_height="2dp"
            android:background="@color/white"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/welcome_sign_in_with"
            android:layout_width="85dp"
            android:layout_height="24dp"
            android:layout_marginStart="22dp"
            android:text="@string/sign_in_with"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            />
        <View
            android:id="@+id/welcome_line_2"
            android:layout_width="84dp"
            android:layout_height="2dp"
            android:layout_marginStart="22dp"
            android:background="@color/white"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/welcome_fb_gg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/welcome_fb"
            android:layout_width="159dp"
            android:layout_height="64dp"
            android:background="@drawable/background_button"
            android:drawableLeft="@drawable/ic_fb"
            android:drawablePadding="10dp"
            android:text="@string/facebook"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />

        <Button
            android:id="@+id/welcome_google"
            android:layout_width="159dp"
            android:layout_height="64dp"
            android:layout_marginStart="18dp"
            android:background="@drawable/background_button"
            android:drawableLeft="@drawable/ic_g"
            android:drawablePadding="10dp"
            android:text="@string/google"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcome_swpoe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@id/welcome_start_with"
            android:layout_width="336dp"
            android:layout_height="64dp"
            android:background="@drawable/background_button"
            android:text="@string/start_with_email_or_phone"
            android:textSize="16sp"
            app:backgroundTint="?android:attr/textColorSecondaryInverse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/welcome_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="10dp"

            />
    </LinearLayout>

</LinearLayout>

